blocks/modal.css
.modal {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.5);
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 999;
  align-items: center;
  justify-content: center;
  padding: 0 19px;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease-in-out, visbility 0.5s ease-in-out;
}

.modal_opened {
  display: flex;
  opacity: 1;
  visibility: visible;
}

.modal__container {
  position: relative;
  border: none;
  background-color: white;
  padding: 36px;
  border-radius: 10px;
  color: #000;
  width: 430px;
  border: 1px solid #000;
  box-sizing: border-box;
  margin-top: 0;
  transform: translateY(-50px);
  transition: transform 0.3s ease;
}

.modal_opened .modal__container {
  transform: translateY(0);
}

.modal__content {
  position: relative;
}

.modal__image {
  width: 100%;
  height: auto;
  padding: 0;
  max-width: 75vw;
  max-height: 75vh;
}

.modal__heading {
  width: 330px;
  height: 23px;
  font-family: "Inter", "Arial", "sans-serif";
  font-weight: 900;
  font-size: 24px;
  line-height: 30px;
  margin-bottom: 54px;
  margin-top: 0;
}

.modal__close {
  background-image: url(../images/Close\ Icon.svg);
  position: absolute;
  bottom: calc(100% + 5px);
  left: calc(100% + 5px);
  border: none;
  background-color: transparent;
  width: 40px;
  height: 40px;
  background-repeat: no-repeat;
  background-size: contain;
  cursor: pointer;
  z-index: 10;
}

.modal__input {
  display: block;
  width: 100%;
  padding: 10px;
  margin-bottom: 20px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  font-size: 16px;
}

.modal__input:first-of-type {
  display: flex;
  justify-content: center;
  width: 358px;
  height: 28px;
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  margin-bottom: 30px;
  margin-top: 54px;
  font-family: "Inter", "Arial", "sans-serif";
  font-size: 14px;
  line-height: 17px;
  font-weight: 400;
}

.modal__input:last-of-type {
  display: flex;
  justify-content: center;
  width: 358px;
  height: 28px;
  background-color: transparent;
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  font-family: "Inter", "Arial", "sans-serif";
  font-size: 14px;
  line-height: 17px;
  font-weight: 400;
}

.modal__button_save {
  display: block;
  width: 358px;
  height: 50px;
  border-radius: 2px;
  background-color: #000;
  color: #fff;
  font-family: "Inter", "Arial", "sans-serif";
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  padding: 0;
  justify-content: center;
  margin-top: 48px;
}

.modal__button_save:hover {
  background-color: #000;
  opacity: 80%;
}

.modal__title {
  width: 330px;
  height: 23px;
  font-family: "Inter", "Arial", "sans-serif";
  line-height: 29px;
  font-size: 24px;
  font-weight: 900;
  margin-bottom: 54px;
}

.modal__input.modal__input_type_title {
  max-width: 358px;
  width: 100%;
  height: 27px;
  box-sizing: border-box;
}

.modal__input.modal__input_type_url {
  max-width: 358px;
  width: 100%;
  height: 27px;
  margin-bottom: 48px;
  box-sizing: border-box;
}

.modal__input_type_error {
  border-bottom-color: #ff0000;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.modal__input:first-of-type.modal__input_type_error,
.modal__input:last-of-type.modal__input_type_error {
  border-bottom-color: #ff0000;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

.modal__error {
  color: #ff0000;
  font-size: 12px;
  line-height: 15px;
  margin-top: 5px;
  visibility: hidden;
}

.modal__error_visible {
  visibility: visible;
}

.modal__button_inactive {
  background-color: #e5e5e5;
  color: #000000;
  opacity: 0.2;
  pointer-events: none;
}

@media screen and (max-width: 320px) {
  .modal__container {
    padding: 0;
    margin: 0;
    width: 282px;
    height: 322px;
  }

  .modal__title {
    width: 238px;
    font-size: 18px;
    line-height: 22px;
    margin-left: 22px;
    margin-top: 25px;
  }

  .modal__close {
    width: 26px;
    height: 26px;
    padding: 0;
    top: -45px;
    left: 245px;
    right: 19px;
    background-size: contain;
  }

  .modal__heading {
    max-width: 238px;
    height: 22px;
    font-size: 18px;
    line-height: 22px;
    margin-left: 22px;
    margin-top: 25px;
  }

  .modal__input:first-of-type {
    max-width: 238px;
    height: 27px;
    margin-left: 22px;
    margin-right: 22px;
    padding: 0;
  }

  .modal__input:last-of-type {
    width: 238px;
    height: 27px;
    margin-right: 22px;
    margin-left: 22px;
    padding: 0;
  }

  .modal__button_save {
    max-width: 238px;
    height: 46px;
    font-size: 14px;
    line-height: 17px;
    margin-left: 22px;
    margin-top: 45px;
  }

  .modal__image {
    width: 100%;
    max-width: 90vw;
    max-height: 75vh;
    object-fit: cover;
  }

  .modal__content {
    position: relative;
  }

  .modal__input.modal__input_type_title {
    max-width: 238px;
    height: 26px;
    padding-bottom: 5px;
  }

  .modal__input.modal__input_type_url {
    max-width: 238px;
    height: 26px;
    padding-bottom: 5px;
  }

  .modal__button.modal__button_save {
    max-width: 238px;
  }
}

